<resources>
    <string name="app_name">Zephyr</string>
    <string name="prompt_email" translatable="true">Email</string>
    <string name="prompt_password" translatable="true">Password</string>
    <string name="title_activity_login" translatable="false">Login</string>
    <string name="remember_me" translatable="true">Remember me</string>
    <string name="sign_in" translatable="true">Sign in</string>
    <string name="empty_email" translatable="true">Please enter your e-mail</string>
    <string name="empty_password" translatable="true">Please enter your password</string>
    <string name="unsuccessfull_login" translatable="true"> Invalid email/password. Please try again.</string>
    <string name="register" translatable="true"> Register</string>
    <string name="register_here" translatable="true"><u>Register here</u></string>
    <string name="name" translatable="true">Name</string>
    <string name="surname" translatable="true">Surname</string>
    <string name="age" translatable="true">Double click to open Calendar</string>
    <string name="birthday_error" translatable="true">Please enter your age in proper format</string>
    <string name="age_rest" translatable="true">You must be at least 18</string>
    <string name="complete_all_fields" translatable="true">Please complete all fields</string>
    <string name="already_exists" translatable="true">Already registered with this e-mail</string>
    <string name="auth_failed" translatable="true">Authentication failed</string>
    <string name="no_back" translatable="true">You can\'t go back</string>
    <string name="gender" translatable="true">Gender</string>
    <string name="loggingIn" translatable="true" type="id">Logging in… Please wait</string>
    <string name="email_sent" translatable="true">"Check your e-mail address "</string>
    <string name="yes" translatable="true"> Yes</string>
    <string name="no" translatable="true">No</string>
    <string name="registering" translatable="true">Please wait while registration is still on process…</string>
    <string name="double_press" translatable="true">Press back again to exit</string>
    <string name="smth_wrong" translatable="true">Something went wrong</string>
    <string name="language_changed" translatable="true">Language settings set to English</string>
    <string name="action_settings" translatable="true">Settings</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="tab_text_3" translatable="false">Tab 3</string>
    <string name="age1" translatable="true">Age</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="edit_profile" translatable="true">Edit profile</string>
    <string name="about_you" translatable="true">Write a bit about yourself…</string>
    <string name="updating_profile" translatable="true">Updating profile. Please wait…</string>
    <string name="female" translatable="true">Woman</string>
    <string name="male" translatable="true"> Man</string>
    <string name="access" translatable="true">Allow <b>Zephyr</b> to access photos, media and files on your device?</string>
    <string name="allow" translatable="true">Allow</string>
    <string name="deny" translatable="true">Deny</string>
    <string name="access_denied" translatable="true">Access denied</string>
    <string name="camera" translatable="true">Camera</string>
    <string name="gallery" translatable="true">Gallery</string>
    <string name="cancel" translatable="true">Cancel</string>
    <string name="choose_photo" translatable="true">Choose photo</string>
    <string name="setting_profile" translatable="true">Setting up your profile. Please wait a while…</string>
    <string name="partner_username" translatable="false">Partner Username</string>
    <string name="messages" translatable="true"> Messages</string>
    <string name="new_matches" translatable="true">New Matches</string>
    <string name="enter_message" translatable="true">Enter your message here</string>
    <string name="english" translatable="true">English</string>
    <string name="russian" translatable="true">Russian</string>
    <string name="azerbaijani" translatable="true">Azerbaijani</string>
    <string name="chooseLanguage" translatable="true">Choose language</string>
    <string name="new_picture" translatable="true">New photo</string>
    <string name="from_camera" translatable="true">From Camera</string>
    <string name="about_username" translatable="true">About Username</string>
    <string name="username" translatable="true">Username</string>
    <string name="about" translatable="true">About</string>
    <string name="nothing_to_show" translatable="false">Nothing to show</string>
    <string name="notification1" translatable="true">Someone liked you!</string>
    <string name="notification2" translatable="true">walked next to you!</string>
    <string name="delete_confirm" translatable="true">Do you really want to delete this photo?</string>
    <string name="delete" translatable="true">Delete photo</string>
    <string name="confirm" translatable="true">Confirm</string>
    <string name="deleted" translatable="true">Chosen photo deleted</string>
    <string name="chooseAction" translatable="true">Choose</string>
    <string name="addNewPhoto" translatable="true">Add new photo</string>
    <string name="maximum_distance">Maximum distance</string>
    <string name="settings" translatable="true">Settings</string>
    <string name="age_range" translatable="true">Age range</string>
    <string name="forgot_password" translatable="true">Forgot password?</string>
    <string name="deletingPhoto" translatable="true">Deleting photo…</string>
    <string name="newMatch" translatable="true">You have new match</string>
    <string name="name1_males" translatable="false">Murad</string>
    <string name="name2_males" translatable="false">Əli</string>
    <string name="name3_males" translatable="false">Toğrul</string>
    <string name="name4_males" translatable="false">Nurlan</string>
    <string name="name1_females" translatable="false">Aysel</string>
    <string name="name2_females" translatable="false">Aynur</string>
    <string name="name3_females" translatable="false">Günel</string>
    <string name="name4_females" translatable="false">Günay</string>
    <string name="name5_females" translatable="false">Lalə</string>
    <string name="name6_females" translatable="false">Nərmin</string>
    <string name="name7_females" translatable="false">Leyla</string>
    <string name="name8_females" translatable="false">Ləman</string>
    <string name="name9_females" translatable="false">Nigar</string>
    <string name="name10_females" translatable="false">Mədinə</string>
    <string name="name11_females" translatable="false">Elya</string>
    <string name="name12_females" translatable="false">Aygün</string>
    <string name="name13_females" translatable="false">Sabina</string>
    <string name="name14_females" translatable="false">Aida</string>
    <string name="name15_females" translatable="false">Fidan</string>
    <string name="accept_policy" translatable="true">"*By pressing register, you agree to our <u> Terms</u> of usage. "</string>
    <string name="privacy_policyTitle" translatable="true">Privacy Policy*</string>
</resources>