<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:id="@+id/relativeLayout"
    android:background="@color/colorPrimaryDark">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="128dp"
        android:layout_height="139dp"
        android:layout_marginTop="50dp"
        android:src="@mipmap/ic_launcher"
        app:civ_border_color="@android:color/transparent"
        app:civ_border_width="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:drawableStart="@drawable/ic_mail"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:textAllCaps="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"/>

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="272dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmail"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/rememberMe"
        app:layout_constraintTop_toTopOf="@+id/rememberMe" />

    <CheckBox
        android:id="@+id/rememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/remember_me"
        android:textColor="@color/colorAccent"
        android:textColorLink="@color/common_google_signin_btn_text_dark_focused"
        app:layout_constraintEnd_toStartOf="@+id/forgotPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loginEmail"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/register_here"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInCard" />

    <android.support.v7.widget.CardView
        android:id="@+id/signInCard"
        android:layout_width="184dp"
        android:layout_height="36dp"
        android:layout_marginBottom="72dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sign_in"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>