<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/colorPrimaryDark">

    <RadioButton
        android:id="@+id/femaleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

    <RadioButton
        android:id="@+id/maleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="72dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="107dp"
        android:layout_height="94dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:src="@mipmap/ic_launcher"
        app:civ_border_color="@android:color/transparent"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_mail"
        android:hint="@string/prompt_email"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        android:inputType="textEmailAddress"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationSurname" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginStart="56dp"
        android:drawableStart="@drawable/ic_lock"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEmail" />

    <android.support.v7.widget.CardView
        android:id="@+id/signUp"
        android:layout_width="237dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/register"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <EditText
        android:id="@+id/registrationName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_user"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <EditText
        android:id="@+id/registrationSurname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_user"
        android:ems="10"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        android:hint="@string/surname"
        android:inputType="text"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationName" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age"
        app:srcCompat="@drawable/ic_male" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="78dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age"
        app:srcCompat="@drawable/ic_female" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorAccent"
        android:text="@string/gender"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/age" />

    <EditText
        android:id="@+id/age"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginEnd="56dp"
        android:layout_marginStart="56dp"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_age"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPassword" />

    <TextView
        android:id="@+id/privacyPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/accept_policy"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>