<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout4"
        app:layout_constraintVertical_bias="0.0">

        <android.support.v4.view.ViewPager
            android:id="@+id/userProfileViewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout4"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_weight="0.05"
            android:text="@string/about"
            android:textColor="@color/main_page_colorPrimaryDark"
            android:textSize="16sp" />


        <android.support.v7.widget.CardView
            android:id="@+id/userProfileAboutCV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            app:cardBackgroundColor="@color/colorPrimary">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/userProfileAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:text="@string/nothing_to_show"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?android:attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/userProfileUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="156dp"
            android:layout_marginTop="16dp"
            android:text="@string/username"
            android:textColor="@color/main_page_colorPrimaryDark"
            android:textSize="20sp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>

